# collab-todo

./: .gitignore  LICENSE  README.md  compose.yaml
services/auth/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  ci.yaml  config.py  main.py  pyproject.toml  pytest.ini  supabase.sql
services/auth/database/: supabase.sql
services/auth/models/: user.py
services/auth/routes/: auth_routes.py
services/auth/schemas/: auth_schemas.py
services/auth/services/: auth_service.py
services/auth/tests/: test_auth_routes.py  test_auth_service.py  test_schemas.py  test_user_repository.py
services/auth/tests/integration/: conftest.py
services/auth/utils/: constants.py  logger.py
services/collab/: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  pytest.ini  supabase.sql
services/collab/core/: coordinator.py  pubsub_listener.py  state_manager.py
services/collab/core/lua_scripts/: add_item.lua  delete_item.lua  update_item.lua
services/collab/database/: supabase.sql
services/collab/handlers/: connection_handler.py  item_handler.py  list_handler.py
services/collab/middleware/: middleware.py
services/collab/models/: item.py  list.py
services/collab/schemas/: item_schema.py  list_schema.py
services/collab/services/: item_service.py  list_service.py  permission_service.py
services/collab/tests/: test_item_service.py  test_list_service.py  test_lua_scripts.py  test_permission_service.py
services/collab/utils/: constants.py  logger.py  timestamp.py
services/collab/worker/: supabase_writer.py
(+47 files in other folders)
